- Added `sharpen-collection-*` classes to apply spacing between items in a (vertical) list - Grid alignment and content placement refinements for sharpen-profile-card. Fixes #21

--- a/src/components/sharpen-profile-card/sharpen-profile-card.scss
+++ b/src/components/sharpen-profile-card/sharpen-profile-card.scss
@@ -3,12 +3,15 @@ sharpen-profile-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    place-content: center;
-    gap: 20px;    
+    place-content: space-between;
+    gap: 20px;
+    height: 100%;
   }
   
   .name {
     font-size: var(--font-size-lg);
+    text-align: center;
+    flex: 1;
   }
 
   .initial {
